@@ -223,6 +223,11 @@ Zope Changes
 
     Bugs Fixed
 
+      - After the proper introduction of parent-pointers, it's now
+        wrong to acquisition-wrap content providers. We will now use
+        the "classic" content provider expression from Zope
+        3. [malthe]
+    
       - Testing.ZopeTestCase: Remove quota argument from DemoStorage calls in
         preparation for ZODB 3.9.
 
